# SunProxy

./: README.md  README_RU.md  settings.gradle.kts
.github/workflows/: build.yml
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/io/github/ulysseszh/sunproxy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/eu/faircode/netguard/: Packet.java  ServiceSinkhole.kt  Util.kt
app/src/main/java/io/github/ulysseszh/sunproxy/: AppList.kt  MainActivity.kt  MyVpnService.kt  Pref.kt  RedirectRule.kt  SettingsActivity.kt  Utils.kt
app/src/main/jni/netguard/: ip.c  netguard.c  netguard.h  udp.c
app/src/main/jni/sunproxy/: sunproxy.c  sunproxy.h
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_settings.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml  menu_search.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
app/src/main/res/values-ru-rRU/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  preferences.xml
app/src/test/java/io/github/ulysseszh/sunproxy/: RedirectRuleTest.kt  UtilsTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
metadata/en-US/: full_description.txt  short_description.txt
metadata/ru-RU/: full_description.txt  short_description.txt
metadata/ru-RU/changelogs/: 100.txt
metadata/zh-CN/: full_description.txt  short_description.txt
metadata/zh-CN/changelogs/: 100.txt
